--- a/app/assets/stylesheets/components/_banner-home.scss
+++ b/app/assets/stylesheets/components/_banner-home.scss
@@ -1,6 +1,9 @@
 .hero {
   text-align: center;
   position: absolute;
+  background-color: rgba(0,0,0,.4);
+  padding: 300PX;
+  width: 1200PX;
   top: -200px;
   color: white;
     text-align: center;
