--- a/app/views/pages/_home-banner.html.erb
+++ b/app/views/pages/_home-banner.html.erb
@@ -10,29 +10,31 @@
     <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
             <div class="view">
-              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/oXOIH4UAixo/1200x600" alt="First slide">
-              <div class="mask flex-center rgba-black-strong">
-                <div class="carousel-caption">
+              <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/hzgs56Ze49s/1200x600" alt="First slide">
+
+              <div class="mask rgba-black-strong"></div>
+              <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Light mask</h3>
-                      <p>First text</p>
-                      <%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %>
+                      <h3>Create amazing </h3>
+                      <h3>experiences </h3>
+                      <h4>Be unique </h4>
+                      <br><h4><%= link_to "Register your bar", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
-                </div>
+
               </div>
             </div>
         </div>
         <div class="carousel-item">
             <div class="view">
               <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/0rlfiRSdVzU/1200x600" alt="Second slide">
-              <div class="mask flex-center rgba-black-strong">
-                <div class="carousel-caption">
+              <div class="mask rgba-black-strong"></div>
+               <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Light mask</h3>
-                      <p>First text</p>
-                      <%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %>
+                      <h3>Promote culture</h3>
+                      <h4>Give emerging artists the opportunity to showcase their work</h4>
+                      <br><h4><%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %></h4>
                     </class>
-                </div>
+
               </div>
             </div>
         </div>
@@ -40,14 +42,13 @@
             <!--Mask color-->
             <div class="view">
                 <img class="d-block w-100 img-fluid" src="https://source.unsplash.com/Zrp9b3PMIy8/1200x600" alt="Third slide">
-              <div class="mask flex-center rgba-black-strong-strong">
+                <div class="mask rgba-black-strong"></div>
                 <div class="carousel-caption">
                   <class class="hero">
-                      <h3>Light mask</h3>
-                      <p>First text</p>
-                      <%= link_to "Discover our Artists", profiles_path, class: "bw-border-tbg" %>
+                      <h3>Join our community !</h3>
+                      <h4>A network made to promote culture, empower local businesses & artists, craft original experiences.</h4>
+                      <br><h4><%= link_to "Get started", new_profile_path, class: "bw-border-tbg" %></h4>
                     </class>
-                </div>
               </div>
             </div>
         </div>
