--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,6 +13,17 @@
       data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
     ></div><br>
 
+  <%= form_tag events_path, method: :get do %>
+    <div class="search-form-control form-group">
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find an event"
+    %>
+    <%= submit_tag "Search", class: "btn btn-primary" %>
+    </div>
+  <% end %>
+
   <% if !@events.empty? %>
   <div class="row">
     <% @events.each do |event| %>
