--- a/app/views/events/preview.html.erb
+++ b/app/views/events/preview.html.erb
@@ -1,8 +1,33 @@
+<%=render 'event-banner'%>
 
- <%= cl_image_tag @event.photo, width: 200, height: 150, crop: :fill %>
- <h1>Event with <%= link_to @artist[:username].capitalize, profile_path(@artist) %> at bar <%= link_to @event.bar.name, bar_path(@event.bar) %></h1>
- <h3>What</h3>
- <p><%= @event[:description] %></p>
-  <h3>When</h3>
-  <p><%= @event[:start_date].strftime("From: %d %B %Y at %Hh%M") %></p>
-  <p><%= @event[:end_date].strftime("To: %d %B %Y at %Hh%M") %></p>
+<div class="container">
+
+    <div class="cards-grid-3quarter">
+
+      <div class="left">
+        <h2><%= link_to @artist[:username].capitalize, profile_path(@artist),class:"blue-link" %></h2>
+        <div class="card-profile">
+        <%= cl_image_tag @artist.photo, :width => 150, :height => 150, crop: :fill, id: "profile", gravity: :face %>
+          <div class="left-description">
+            <h4>
+              <%= @artist.artist_description %>
+            </h4>
+            <br><p><%= link_to "See more", profile_path(@artist),class:"b-border-tbg" %></p>
+          <br></div>
+        </div>
+      </div>
+
+      <div class="right">
+        <h2><%= link_to @event.bar.name, bar_path(@event.bar), class:"blue-link"%></h2>
+        <div
+          id="map"
+          style="width: 100%;
+          height: 250px; margin: 10px auto; box-shadow: 0 0 10px rgba(0,0,0,0.2);"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+        ></div>
+      </div>
+
+    </div>
+
+</div>
