--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,3 +1,10 @@
+.cards-grid-3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 2%;
+  margin: 10px auto;
+}
+
 .cards-grid-4 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -127,8 +134,8 @@
   padding: 10px;
   overflow: scroll;
   line-height: 97%;
-overflow-wrap: break-word;
-height: 100%;
+  overflow-wrap: break-word;
+  height: 100%;
 }
 
 .card-login {
@@ -147,14 +154,29 @@ height: 100%;
   }
 }
 
-.card {
+.card-event-home {
   height: 275px;
   background-size: cover !important;
   background-position: center;
   position: relative;
   margin-top: 20px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  justify-content: space-between;
+}
+
+.card-event-home p,a {
+  margin: 0;
+}
+
+.card-event-home-center {
+
+}
+
+.card-event-date {
+  margin-left: auto;
+  align-self: start;
 }
 
 .layer {
@@ -208,11 +230,12 @@ height: 100%;
   border-radius: 5px;
   border: 1px solid white;
   box-shadow: 0 0 3px white;
-  text-align: center;
   background: transparent;
   letter-spacing: 2px;
   opacity: 1;
   transition: opacity .35s ease;
+  margin-bottom: 20px;
+
 }
 
 .button:hover {
@@ -226,6 +249,8 @@ height: 100%;
   text-transform: uppercase;
   color: white;
   transition: top .5s ease;
+    margin-top: 50%;
+  text-align: center;
 }
 
 
