--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,9 +29,10 @@
 
     </div>
 
-          <p><% if !current_user.bars.empty? && @profile.is_artist %>
-            <p><%= link_to 'Create an event with this artist!', new_profile_event_path(@profile), class: "b-border-tbg" %></p>
-            <br><p><%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class: "b-border-tbg" %></p>
+        <p><% if !current_user.bars.empty?%>
+            <div class="fullspace">
+            <p><%= link_to 'Create an event with this artist!', new_profile_event_path(@profile), class: "b-border-tbg" %><%= link_to "Contact this artist !", new_profile_chatbox_path(@profile), class: "b-border-tbg" %></p>
+            </div>
 
             <% if !@reviews.empty?%>
               <h2>Reviews</h2>
@@ -48,19 +49,19 @@
           <% end %>
 
           <% if !@profile.user.events.empty? %>
-            <h2>Events</h2>
+            <h1>Events</h1>
             <% @profile.user.events.each do |event| %>
               <div class="card-hz-bg">
                 <%= cl_image_tag event.photo, width: 200, height: 200, crop: :fill %>
                 <div class="left-description">
-                  <h3><%= link_to event.name, event_path(event) %></h3>
-                  <p> <%= event.description%></p>
+                  <h2><%= link_to event.name, event_path(event), class:"blue-link" %></h2>
+                  <h4> <%= event.description%></h4>
                 </div>
               </div>
             <% end %>
           <% end %>
 
-    <% if !@profile.is_artist %>
+    <% if current_user != @profile.user %>
       <br><div class="fullspace"><%= link_to "Back to list of artists", profiles_path, class:"b-allwidth-lg" %></div>
     <% end %>
 
