--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,6 +30,8 @@
       <div class="col-sm-4">
         <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= event.photo %>');">
           <p class="title"><%= event.name %></p>
+          <p class="white"><%= event.start_date %></p>
+          <p class="white"><%= event.end_date %></p>
           <% if current_user %>
             <%= link_to "Show", event_path(event), class: "button" %>
           <% else %>
