--- a/app/views/bars/_bar-banner.html.erb
+++ b/app/views/bars/_bar-banner.html.erb
@@ -66,7 +66,7 @@
       <div class="carousel-inner" role="listbox">
           <div class="carousel-item active">
               <div class="view">
-              <%= cl_image_tag @pictures[0].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
+              <%= cl_image_tag @pictures[0].photo, width: 1200, height: 700, crop: :fill, class:"d-block w-100"%>
                   <div class="mask rgba-black-light"></div>
               </div>
               <div class="carousel-caption">
@@ -76,7 +76,7 @@
           <div class="carousel-item">
               <!--Mask color-->
               <div class="view">
-                <%= cl_image_tag @pictures[1].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
+                <%= cl_image_tag @pictures[1].photo, width: 1200, height: 700,crop: :fill, class:"d-block w-100"%>
                   <div class="mask rgba-black-strong"></div>
               </div>
               <div class="carousel-caption">
@@ -87,7 +87,7 @@
             <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <%= cl_image_tag @pictures[2].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
+                  <%= cl_image_tag @pictures[2].photo, width: 1200, height: 700, crop: :fill, class:"d-block w-100"%>
                     <div class="mask rgba-black-slight"></div>
                 </div>
                 <div class="carousel-caption">
@@ -99,7 +99,7 @@
             <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <%= cl_image_tag @pictures[3].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
+                  <%= cl_image_tag @pictures[3].photo, width: 1200, height: 700, crop: :fill, class:"d-block w-100"%>
                     <div class="mask rgba-black-slight"></div>
                 </div>
                 <div class="carousel-caption">
@@ -111,7 +111,7 @@
             <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <%= cl_image_tag @pictures[4].photo, :width => 1200, :height => 400, crop: :fill, class:"d-block w-100"%>
+                  <%= cl_image_tag @pictures[4].photo, width: 1200, height: 700, crop: :fill, class:"d-block w-100"%>
                     <div class="mask rgba-black-slight"></div>
                 </div>
                 <div class="carousel-caption">
