--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -5,8 +5,8 @@
   align-items: center ;
   justify-content: end ;
   height: 70px;
-  position:fixed;
-  bottom:0px;
+  // position:absolute;
+  // bottom:0px;
   padding: 0px 50px;
   // color: rgba(0,0,0,0.3);
   width: 100vw;
