--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,5 +1,12 @@
+<div class="banner-index" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://source.unsplash.com/oXOIH4UAixo/1200x600);">
+  <div class="container">
+    <h1 class="white">All bars </h1>
+  </div>
+</div>
+
+
 <div class="container">
-  <h1>Search for a bar nearby</h1>
+    <h1>Search for a bar nearby</h1>
         <div
       id="map"
       style="width: 100%;
