--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,3 +1,10 @@
+<div class="banner-index" style="background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(https://source.unsplash.com/_Yc7OtfFn-0/1200x600);">
+  <div class="container">
+  <h1 class= "white">All artists</h1>
+  </div>
+</div>
+
+
 <div class="container">
   <h1>Search for an artist in your neighbourhood</h1>
         <div
