--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,6 +35,7 @@
           <% if current_user %>
             <%= link_to "Show", event_path(event), class: "button" %>
           <% else %>
+
           <%= link_to "Preview", preview_event_path(event), class: "button"%>
 
        <!--    to keep !! quick dirty pop up solution try1
@@ -44,17 +45,21 @@
       ///// quick dirty pop up solution  -->
 
 
-<!--        another try : not working yet
 
-            <#%= link_to 'Preview', preview_event_path(event),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'button'}  %>
 
-            <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!--         not yet working modal solution
+
+    <#%= link_to 'Preview', preview_event_path(event),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'button'}  %>
+
+            <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+
               <div class="modal-dialog" role="document">
                 <div class="modal-content"></div>
-              </div>
             </div>
 
-       /////another try : not working yet     -->
+            /// not yet working modal solution -->
+
+
 
           <% end %>
           </div>
