--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -36,7 +36,9 @@
 
             <% if !@reviews.empty?%>
               <h2>Reviews</h2>
-              <p><%= @star * "*" %></p>
+              <% @star.times do %>
+              <p><%= "*" %></p>
+              <% end %>
               <% @reviews.each do |review| %>
                 <div class="card-hz-bg">
                   <div class="left-description">
