--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -37,16 +37,16 @@
             <% if !@reviews.empty?%>
               <h2>Reviews</h2>
               <% @star.times do %>
-              <p><%= "*" %></p>
+                <i class="fas fa-star"></i>
               <% end %>
               <% @reviews.each do |review| %>
                 <div class="card-hz-bg">
                   <div class="left-description">
                     <p><%= review[:content] %></p>
                     <p><%= review[:rating] %></p>
-                  <% end %>
+                  </div>
                 </div>
-              </div>
+              <% end %>
             <% end %>
 
           <% end %>
