--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -5,7 +5,7 @@
   <%= f.input :start_date, order: [:day, :month, :year] %>
   <%= f.input :end_date, order: [:day, :month, :year] %>
   <%= f.input :description %>
-
+  <%= f.input :category, collection: ["Concert", "Exhibition", "Performance"] %>
 
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
