--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon" data-is-navbar-white="<%= is_navbar_white? %>">
   <%= link_to root_path, class: "navbar-brand" do %>
     <h2>bart</h2>
     <% end %>
