--- a/app/views/chatboxes/index.html.erb
+++ b/app/views/chatboxes/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container"><br><br><br><br>
   <% if !@chatboxes.empty? %>
     <h1>YOUR MESSAGES</h1>
     <% @chatboxes.each do |hash| %>
