--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,7 +36,13 @@
             <%= link_to "Show", event_path(event), class: "button" %>
           <% else %>
 
-          <%= link_to "Preview", preview_event_path(event), class: "button"%>
+            <button type="button" class="button" data-toggle="modal" data-target="#exampleModalCenter">
+              Preview
+            </button>
+
+            <%= render 'modal_prev', event: event %>
+
+<!--           <#%= link_to "Preview", preview_event_path(event), class: "button"%> -->
 
        <!--    to keep !! quick dirty pop up solution try1
 
@@ -45,28 +51,12 @@
       ///// quick dirty pop up solution  -->
 
 
-
-
-<!--         not yet working modal solution
-
-    <#%= link_to 'Preview', preview_event_path(event),  {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'button'}  %>
-
-            <div id="modal-window" class="modal hide fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
-
-              <div class="modal-dialog" role="document">
-                <div class="modal-content"></div>
-            </div>
-
-            /// not yet working modal solution -->
-
-
-
           <% end %>
           </div>
       </div>
     <% end %>
   </div>
-<% end %>
+  <% end %>
 
 
 
