--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Edit your review</h1>
-<%= render 'form' %>
+<div class="container">
+  <div class="card-rev"></div>
+    <%= render 'form', event: @event, review: @review  %>
+  </div>
+</div>
