--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,6 @@
-<h1>Your review:</h1>
-<%= render 'form' %>
+<div class="container">
+
+  <%= render 'form', event: @event, review: @review %>
+
+</div>
+
