--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,8 +1,10 @@
-<%= simple_form_for [@event, @review] do |f| %>
-  <%= f.error_notification %>
+<div class="card-rev ">
+    <%= simple_form_for [event, review] do |f| %>
+      <%= f.error_notification %>
 
-  <%= f.input :content %>
-  <%= f.input :rating, collection: 1..5 %>
+      <%= f.input :content,  wrapper_html: { class: "input-des" } %>
+      <%= f.input :rating, collection: 1..5,  wrapper_html: { class: "input-des" } %>
 
-  <%= f.button :submit, "Submit" %>
-<% end %>
+      <%= f.button :submit, "Submit", class:"b-border-whitebg" %>
+    <% end %>
+</div>
