--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,49 @@
-<h1>LIST OF EVENTS</h1>
-<% @events.each do |event| %>
 
-  <div class="card-product">
-  <%= cl_image_tag event.photo, height: 160, width: 160, crop: :fill %>
-  <div class="card-product-infos">
-    <h2><%= event.name %></h2>
-    <p><%= event[:description] %></p>
-    <p><%= link_to 'See more details', event_path(event) %></p>
-  </div>
+  <div class="well">
+  A modern auto-complete field based on <a href="https://github.com/algolia/autocomplete.js"><code>autocomplete.js</code></a> + <code>Hogan</code> and <code>AlgoliaSearch JS Client</code> example.
+</div>
+
+  <div class="container">
+
+
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <input name="name" placeholder="Name or description" id="q" class="form-control" />
+
+      <div class="search-terms">
+        Try
+        <a href="javascript:void(0)">John</a>,
+        <a href="javascript:void(0)">Jonn</a>,
+        <a href="javascript:void(0)">roebekah</a>
+      </div>
+    </div>
   </div>
 
-<% end %>
+<script src="//cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js"></script>
+<script type="text/javascript">
+  $(document).ready(function() {
+    var client = algoliasearch('<%= ENV['ALGOLIASEARCH_APPLICATION_ID'] %>', '<%= ENV['ALGOLIASEARCH_API_KEY_SEARCH'] %>');
+    var template = Hogan.compile('<div class="hit-auto-complete">' +
+        '<div class="name">{{{_highlightResult.name.value}}}</div>' +
+        '<div class="description">{{{_highlightResult.description.value}}}</div>' +
+      '</div>');
+    var ac = autocomplete('#q', { hint: true }, {
+      source: autocomplete.sources.hits(client.initIndex('<%= Event.index_name %>'), { hitsPerPage: 5 }),
+      displayKey: 'name',
+      templates: {
+        suggestion: function(hit) {
+          return template.render(hit);
+        }
+      }
+    }).on('autocomplete:selected', function(event, suggestion) {
+      console.log('onselected', suggestion);
+    });
+    $('.search-terms a').click(function(e) {
+      ac.autocomplete.setVal($(this).text());
+      ac.autocomplete.open();
+      ac.focus();
+    })
+  });
+</script>
+
+ </div>
