--- a/app/views/artist_pictures/new.html.erb
+++ b/app/views/artist_pictures/new.html.erb
@@ -2,9 +2,9 @@
   <h1>select pictures to upload</h1>
   <%= simple_form_for [@profile, @artist_picture] do |f| %>
     <%= f.error_notification %>
-    <%#= f.input :photo %>
-    <%#= f.input :photo_cache, as: :hidden %>
     <%= f.input :artist_pictures, as: :file, input_html: { multiple: true } %>
+    <%#= f.input :artist_pictures, as: :file, input_html: { multiple: true }, label: "Select multiple photos" %>
+    <%#= f.input :photo, as: :file, input_html: { multiple: true }, name: "profile[pictures_attributes][][photo]" %>
     <%= f.button :submit, "Upload", class: "b-border-tbg" %>
   <% end %>
 </div>
