--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,9 +1,8 @@
 <div class="container">
-  <h1>select a picture to upload</h1>
+  <h1>select pictures to upload</h1>
   <%= simple_form_for [@bar, @picture] do |f| %>
     <%= f.error_notification %>
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
+    <%= f.input :pictures, as: :file, input_html: { multiple: true } %>
     <%= f.button :submit, "Upload", class: "b-border-tbg" %>
   <% end %>
 </div>
